syntax = "proto3";
package types;

import "util.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/keybittech/awayto-v3/go/pkg/types";

service RoleService {
  rpc PostRole(PostRoleRequest) returns (PostRoleResponse) {
    option (google.api.http) = {
      post: "/v1/roles"
      body: "*"
    };
    option (throttle) = 1;
    option (use_tx) = true;
  }

  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse) {
    option (google.api.http) = {
      get: "/v1/roles"
    };
  }

  rpc GetRoleById(GetRoleByIdRequest) returns (GetRoleByIdResponse) {
    option (google.api.http) = {
      get: "/v1/roles/{id}"
    };
  }

  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {
    option (google.api.http) = {
      delete: "/v1/roles/{ids}"
    };
  }
}

message IRole {
  string id = 1;
  string name = 2;
  string createdOn = 3;
  int32 row = 4;
}

message PostRoleRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message PostRoleResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetRolesRequest {}

message GetRolesResponse {
  repeated IRole roles = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetRoleByIdRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetRoleByIdResponse {
  IRole role = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteRoleRequest {
  string ids = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteRoleResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

